--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Icon Font for ZomoZ projects",
   "private": false,
   "scripts": {
-    "build": "fontforge -script build.pe zomoz-icons-regular.sfd"
+    "build": "fontforge -script build.pe icon-font.sfd"
   },
   "repository": {
     "type": "git",
